src/objects/Notification__e.object
<CustomObject>
    <fields>
        <fullName>AdditionalInfo__c</fullName>
        <description>Additional JSON-formatted information.</description>
        <label>Additional Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <description>Indicates the context or source of the message.</description>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Text field to specify the type of message</description>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
</CustomObject>